--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "geist": "^1.3.0",
+    "jotai": "^2.12.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "uuid": "^11.0.5",
     "zod": "^3.23.3"
   },
   "devDependencies": {
