--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "mongodb:push": "prisma db push --schema=./prisma/mongo/schema.prisma",
+    "mongodb:studio": "prisma studio --schema=./prisma/mongo/schema.prisma",
     "dev": "next dev --turbo",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate && prisma generate --schema=./prisma/mongo/schema.prisma",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
@@ -29,6 +31,7 @@
     "bcryptjs": "^2.4.3",
     "geist": "^1.3.0",
     "jotai": "^2.12.0",
+    "mongodb": "^6.13.1",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
