--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:studio": "prisma studio",
     "mongodb:push": "prisma db push --schema=./prisma/mongo/schema.prisma",
     "mongodb:studio": "prisma studio --schema=./prisma/mongo/schema.prisma",
-    "dev": "next dev --turbo",
+    "dev": "node --loader ts-node/esm server.ts",
     "postinstall": "prisma generate && prisma generate --schema=./prisma/mongo/schema.prisma",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -28,6 +28,7 @@
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/socket.io": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "geist": "^1.3.0",
     "jotai": "^2.12.0",
@@ -37,6 +38,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.0.5",
     "zod": "^3.23.3"
   },
