--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:studio": "prisma studio",
     "mongodb:push": "prisma db push --schema=./prisma/mongo/schema.prisma",
     "mongodb:studio": "prisma studio --schema=./prisma/mongo/schema.prisma",
-    "dev": "node --loader ts-node/esm server.ts",
+    "dev": "node --loader ts-node/esm src/server.ts",
     "postinstall": "prisma generate && prisma generate --schema=./prisma/mongo/schema.prisma",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -57,6 +57,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
