[feat] Yjs 기본 설정 및 Nodmon, 전역 로딩 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,14 +15,14 @@
     "lib": ["dom", "dom.iterable", "ES2022"],
     "noEmit": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node16",
     "jsx": "preserve",
     "plugins": [{ "name": "next" }],
     "incremental": true,
 
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["*"]
     }
   },
   "include": [
