--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:studio": "prisma studio",
     "mongodb:push": "prisma db push --schema=./prisma/mongo/schema.prisma",
     "mongodb:studio": "prisma studio --schema=./prisma/mongo/schema.prisma",
-    "dev": "node --loader ts-node/esm src/server.ts",
+    "dev": "nodemon --exec node --loader ts-node/esm -r tsconfig-paths/register src/server.ts",
     "postinstall": "prisma generate && prisma generate --schema=./prisma/mongo/schema.prisma",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -41,6 +41,9 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.0.5",
+    "y-socket.io": "^1.1.3",
+    "y-websocket": "^2.1.0",
+    "yjs": "^13.6.23",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -52,6 +55,8 @@
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
+    "module-alias": "^2.2.3",
+    "nodemon": "^3.1.9",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
@@ -62,6 +67,9 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
+  },
+  "_moduleAliases": {
+    "~": "./src"
   },
   "packageManager": "npm@10.5.0"
 }
