--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "bcryptjs": "^2.4.3",
     "geist": "^1.3.0",
     "jotai": "^2.12.0",
+    "konva": "^9.3.18",
     "mongodb": "^6.13.1",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-konva": "^19.0.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.0.5",
