--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
-    "start": "next start",
+    "start": "NODE_ENV=production node --loader ts-node/esm -r tsconfig-paths/register src/server.ts",
+    "start:full": "next build && NODE_ENV=production node --loader ts-node/esm -r tsconfig-paths/register src/server.ts",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
