--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jotai": "^2.12.0",
     "konva": "^9.3.18",
     "mongodb": "^6.13.1",
+    "nanoid": "^5.1.4",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "perfect-freehand": "^1.2.2",
